Enable Generational ZGC in Game settings.